--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow us to add photo from your photo library.</string>
+
+	<key>NSCameraUsageDescription</key>
+	<string>Allow us access to the camera for taking photo.</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Allow us to record audio.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow us to fetch your location.</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
