--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_riverpod: ^2.4.9
   uuid: ^4.2.2
+  image_picker: ^1.0.7
+  location: ^5.0.3
+  path_provider: ^2.1.2
+  sqflite: ^2.3.2
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
